@@ -15,7 +15,7 @@ import com.google.common.collect.Lists;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -39,17 +39,17 @@ public class SlicingAbstractionsTest {
   private static final String TEST_DIR_PATH = "test/programs/slicingabstractions/";
   private static final String CONFIG_DIR_PATH = "config/";
 
-  private static final boolean isConfig(File pPathname) {
+  private static boolean isConfig(File pPathname) {
           return ((pPathname.getName().contains("Kojak")
                   || pPathname.getName().contains("SlicingAbstractions"))
               && !pPathname.getName().contains("overflow"));
   }
 
-  private static final boolean isSlabConfig(File pPathname) {
+  private static boolean isSlabConfig(File pPathname) {
       return pPathname.getName().contains("Slab");
   }
 
-  private static final boolean isOverflowConfig(File pPathname) {
+  private static boolean isOverflowConfig(File pPathname) {
           return ((pPathname.getName().contains("Kojak")
                   || pPathname.getName().contains("SlicingAbstractions"))
               && pPathname.getName().contains("overflow"));
@@ -201,7 +201,7 @@ public class SlicingAbstractionsTest {
   }
 
   private void check(String pFilename, Configuration config) throws Exception {
-    String fullPath = Paths.get(TEST_DIR_PATH, filename).toString();
+    String fullPath = Path.of(TEST_DIR_PATH, filename).toString();
 
     TestResults results = CPATestRunner.run(config, fullPath);
     if (!configname.contains("overflow")) {
